# EE4208-FaceDetection

./: CMakeLists.txt  compile.sh  faceDetection  runDetection.sh  runTraining.sh  training
sample/: CMakeLists.txt  faceDet.cpp  faceDetection.docx  faceDetection.rar
src/: EE4208Utils.cpp  cascadeTraining.cpp  faceDetection.cpp  faceDetectionV2.cpp  training.cpp  trainingV2.cpp
