CMAKE_MINIMUM_REQUIRED( VERSION 3.7 )
PROJECT( EE4208 )

SET(CMAKE_CXX_COMPILER "g++")
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_BUILD_TYPE Debug)
set(EXECUTABLE_OUTPUT_PATH ../)
#SET(OpenCV_INCLUDE_DIRS /usr/local/opt/opencv@4/include)
#SET(OpenCV_LIBS /usr/local/opt/opencv@4/lib)

#SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake-modules)
FIND_PACKAGE(OpenCV REQUIRED)
#INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(src)
LINK_DIRECTORIES(src)

ADD_EXECUTABLE(training src/training.cpp)
ADD_EXECUTABLE(faceDetection src/faceDetection.cpp)

TARGET_LINK_LIBRARIES(faceDetection ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES(training ${OpenCV_LIBS})
